--- a/views/header.ejs
+++ b/views/header.ejs
@@ -47,6 +47,7 @@
                     <!-- Redirige a la lista de protectoras -->
                     <li><a class="nav-link" href="/misperros">Mis perros</a></li>
                     <li><a class="nav-link" href="/solicitudesadopcion"> Solicitudes de adopción</a></li>
+                    <li><a class="nav-link" href="/perrosAdoptadosProtectora"> Mis perros adoptados</a></li>
                     <% }else if(tipo === "ProtectoraPendiente"){%>
                         <li><a class="nav-link" href="/perfil">Mi perfil</a></li>
                         <% }else if(tipo === "Adoptante"){%>
