--- a/views/modificarPerro.ejs
+++ b/views/modificarPerro.ejs
@@ -51,7 +51,7 @@
 			  </div>
 				<div class="form-group col-md-3">
 				  <label for="inputEdad4">Edad</label>
-				  <input type="number" class="form-control" name="edad" id="inputEdad4" value="<%= datos.edad %>" placeholder="Email" required>
+				  <input type="number" class="form-control" name="edad" id="inputEdad4" value="<%= datos.edad %>" placeholder="Edad" required>
 				</div>
 				<div class="form-group col-md-3">
 				  <label for="inputRaza4">Raza</label>
@@ -65,8 +65,8 @@
 				  <label for="inputPeso">Peso</label>
 				  <input type="text" class="form-control" name="peso" value="<%= datos.peso %>" id="inputPeso" required>
 				</div>
-				<div class="form-group col-md-6">
-				<label for="inputFall">Fallecido</label>
+				<!-- <div class="form-group col-md-6">
+					<label for="inputFall">Fallecido</label>
 					<div class="form-check form-check-inline">
 						<input class="form-check-input" type="radio" name="fallecido" id="inlineRadio1" value="1" >
 						<label class="form-check-label" for="inlineRadio1">Si</label>
@@ -75,7 +75,7 @@
 						<input class="form-check-input" type="radio" name="fallecido" id="inlineRadio2" value="0">
 						<label class="form-check-label" for="inlineRadio2">No</label>
 					</div>
-				</div>
+				</div> -->
 				<div class="form-group col-md-6">
 				<label for="inputFall">Adoptado</label>
 					<div class="form-check form-check-inline">
@@ -102,17 +102,17 @@
 			</form>
         </div>
 		<script>
-		if(<%= datos.fallecido %>===0){
-			document.getElementsByName("fallecido")[1].checked=true;
-		}else{
-			document.getElementsByName("fallecido")[0].checked=true;
-		}
-		
-		if(<%= datos.adoptado %>==0){
-			document.getElementsByName("adoptado")[1].checked=true;
-		}else{
-			document.getElementsByName("adoptado")[0].checked=true;
-		}
+			/*if(datos.fallecido ===0){
+				document.getElementsByName("fallecido")[1].checked=true;
+			}else{
+				document.getElementsByName("fallecido")[0].checked=true;
+			}*/
+			
+			if(datos.adoptado ===0){
+				document.getElementsByName("adoptado")[1].checked=true;
+			}else{
+				document.getElementsByName("adoptado")[0].checked=true;
+			}
 		</script>
         <%-	include('./footer'); %>
 </body>
